plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version '0.19.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// spring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// mysql driver
	runtimeOnly 'com.mysql:mysql-connector-j'

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	// google oauth
	implementation 'com.google.api-client:google-api-client:2.8.1'

	// nimbus-jose-jwt
	implementation 'com.nimbusds:nimbus-jose-jwt:10.7'

	// test
	testImplementation 'com.squareup.okhttp3:mockwebserver:5.3.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // swagger
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.4'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'

    // aws
    implementation(platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1"))
    implementation("io.awspring.cloud:spring-cloud-aws-starter-s3")
}

ext {
    // REST Docs가 생성하는 snippets 출력 경로
    snippetsDir = file('build/generated-snippets')

    // 실행 시 활성화할 Spring profile
    runProfile = (project.findProperty('runProfile')
            ?: project.findProperty('profile')
            ?: System.getenv('SPRING_PROFILES_ACTIVE')
            ?: 'local') as String

    // Swagger UI의 "Try it out" 기본 서버 주소
    openApiServer = (project.findProperty('openApiServer')
            ?: System.getenv('OPENAPI_SERVER')
            ?: 'http://localhost:8080') as String
}

openapi3 {
    server = openApiServer

    title = "Pickle API"
    description = "Pickle REST API"
    format = 'yaml'

    outputDirectory = layout.buildDirectory.dir('api-spec').get().asFile.path
}

def openapiFile = layout.buildDirectory.file("api-spec/openapi3.yaml")
def apiDocsOutDir = layout.buildDirectory.dir("generated-docs/static/api-docs")

tasks.register('docsTest', Test) {
    group = 'verification'
    useJUnitPlatform {
        includeTags 'restdocs'
    }

    outputs.dir snippetsDir
    systemProperty 'spring.profiles.active', 'test'
}

tasks.matching { it.name == 'openapi3' }.configureEach {
    dependsOn tasks.named('docsTest')
}

tasks.register("patchOpenApiSecurity") {
    dependsOn tasks.matching { it.name == "openapi3" }

    doLast {
        File swaggerUIFile = file("${openapi3.outputDirectory}/openapi3.yaml")
        String y = swaggerUIFile.getText("UTF-8").replace("\r\n", "\n")

        // ✅ 공개 엔드포인트 목록 (여기만 추가하면 됨)
        def publicPaths = [
                "/oauth/login",
                "/token"
        ] as Set

        // 1) securitySchemes.bearerAuth 보장 (Authorize 버튼)
        boolean hasBearerAuth =
                y.contains("\n    bearerAuth:\n") || y.contains("\n  bearerAuth:\n") || y.contains("\nbearerAuth:\n")

        if (!hasBearerAuth) {
            String bearerBlock =
                    """    bearerAuth:
      type: http
      scheme: bearer
      bearerFormat: JWT
"""

            boolean hasComponents = y.contains("\ncomponents:\n")
            boolean hasSecuritySchemesInComponents = y.contains("\n  securitySchemes:\n")

            if (hasComponents) {
                if (hasSecuritySchemesInComponents) {
                    // components 아래 securitySchemes가 이미 있으면 거기에 bearerAuth만 삽입
                    y = y.replaceFirst(/\n  securitySchemes:\n/, "\n  securitySchemes:\n${bearerBlock}")
                } else {
                    // components는 있는데 securitySchemes가 없으면 components 아래에 새로 생성
                    y = y.replaceFirst(/\ncomponents:\n/, "\ncomponents:\n  securitySchemes:\n${bearerBlock}")
                }
            } else {
                // components 자체가 없으면 맨 끝에 추가
                y += "\ncomponents:\n  securitySchemes:\n${bearerBlock}"
            }
        }

        // 2) operation별 security 삽입 (publicPaths는 제외)
        def out = new StringBuilder()
        def lines = y.readLines()
        boolean inPaths = false
        String currentPath = null

        for (int i = 0; i < lines.size(); i++) {
            String line = lines[i]
            out.append(line).append("\n")

            if (line.trim() == "paths:") {
                inPaths = true
                continue
            }

            if (!inPaths) continue

            // path 라인: "  /something:"
            if (line ==~ /^  \/.*:\s*$/) {
                currentPath = line.trim().replace(":", "")
                continue
            }

            // method 라인: "    post:" (indent 4)
            if (line ==~ /^\s{4}(get|post|put|patch|delete|options|head|trace):\s*$/) {
                // 공개 path면 security 추가 안 함
                if (currentPath != null && publicPaths.any { p ->
                    currentPath == p || currentPath.startsWith(p + "/")
                }) {
                    continue
                }

                // 이미 security 있으면 스킵
                boolean hasSecurity = false
                int j = i + 1
                while (j < lines.size()) {
                    String l = lines[j]
                    int indent = l.takeWhile { it == ' ' }.size()
                    if (indent <= 4) break
                    if (l ==~ /^\s+security:\s*$/) { hasSecurity = true; break }
                    j++
                }

                if (!hasSecurity) {
                    out.append("      security:\n")
                    out.append("      - bearerAuth: []\n")
                }
            }
        }

        swaggerUIFile.write(out.toString(), "UTF-8")
    }
}

tasks.register("copyOpenApiToStatic", Copy) {
    dependsOn tasks.named("patchOpenApiSecurity")
    from(openapiFile)
    into(apiDocsOutDir)
    rename { "openapi3.yaml" }
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'restdocs'
    }
}

tasks.named('bootRun') {
    dependsOn tasks.named("copyOpenApiToStatic")
    systemProperty 'spring.profiles.active', runProfile
    classpath += files(layout.buildDirectory.dir("generated-docs"))
}

tasks.named('bootJar') {
    dependsOn tasks.named('copyOpenApiToStatic')
    from(apiDocsOutDir) {
        into("BOOT-INF/classes/static/api-docs")
    }
}
